Add university's color theme to the  home page

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
     <header>
         <nav class="navbar">
             <div class="nav-container">
+                <a href="index.html" id="home-link">
                 <div class="nav-logo">
                     <img src="/Images/ClubLogo2.png" alt="GAI logo" width="65">
                     <span class="club-name">GenAI Club</span>
                 </div>
+                </a>
                 <ul class="nav-menu">
                     <li><a href="index.html" class="nav-link">Home</a></li>
                     <li><a href="about.html" class="nav-link">About</a></li>
@@ -36,8 +38,7 @@
         <section class="hero">
             <div class="hero-content">
                 <h1 class="hero-title">Generative AI Club</h1>
-                <p class="hero-subtitle">University of Minnesota</p>
-                <p class="hero-description">Exploring the future of artificial intelligence through hands-on projects, workshops, and community collaboration</p>
+                <p class="hero-description">Exploring the future of artificial intelligence through hands-on projects, workshops, and community collaboration!</p>
                 <a href="contact.html" class="cta-button">Join Our Club</a>
             </div>
             <div class="hero-visual">
