Add lottie animation on landing page and scrolling for the officer cards

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="/favicon_io/site.webmanifest">
+    <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
 </head>
 <body>
     <header>
@@ -42,12 +43,14 @@
                 <a href="contact.html" class="cta-button">Join Our Club</a>
             </div>
             <div class="hero-visual">
-                <div class="ai-grid">
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                </div>
+                <dotlottie-player
+                    src="https://lottie.host/99c195a3-f34a-48fa-8c93-b6d60149a88e/l9Pewl5lpQ.lottie"
+                    background="transparent"
+                    speed="0.8"
+                    style="width: 530px; height: 530px"
+                    loop
+                    autoplay
+                ></dotlottie-player>
             </div>
         </section>
 
