Add university color theme to resources page with proper navbar

--- a/resources.html
+++ b/resources.html
@@ -6,17 +6,22 @@
     <title>Resources - Generative AI Club</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/favicon_io/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/favicon_io/site.webmanifest">
 </head>
 <body>
     <header>
         <nav class="navbar">
             <div class="nav-container">
+                <a href="index.html" id="home-link">
                 <div class="nav-logo">
-                    <div class="logo-placeholder">
-                        <span>🤖 AI</span>
-                    </div>
+                    <img src="/Images/ClubLogo2.png" alt="GAI logo" width="65">
                     <span class="club-name">GenAI Club</span>
                 </div>
+                </a>
                 <ul class="nav-menu">
                     <li><a href="index.html" class="nav-link">Home</a></li>
                     <li><a href="about.html" class="nav-link">About</a></li>
